--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>A Cappella Championships</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="./src/index.js"></script>
     <script src="./src/aCappellaGroup.js"></script>
     <link rel="stylesheet" href="./assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans" rel="stylesheet">
@@ -25,11 +24,13 @@
             <th class='padding center'>Membership</th>
             <th class='padding center'>Division</th>
             <th class='padding center'>Crown as Winner</th>
+            <th class='padding center'>Remove Group</th>
           </tr>
         </thead>
         <tbody id="table-body">
         </tbody>
       </table>
     </div>
+  <script src="./src/index.js"></script>
   </body>
 </html>
